--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
   <p> Sabemos que aproximadamente de 11:30 a 1:00 en los locales de comida hay una tardanza de 5 minutos para pedir
     tu comida y 10-15 minutos para recibir tu comida, en las demás horas hay pocas personas pidiendo comida y lo
     recibes en el tiempo estimado de guich o yumyum.</p>
-  <h2> BenchMaking (te toca a ti amors)</h2>
+  <h2> BenchMaking </h2>
   <h2> Impacto Social </h2>
   <p> Esto ayuda drasticamente las clases que la mayoria de los alumnos tienen hambre, de 11:30 a 2:15 las clases, 
   aunque sea con un poco de comida si cambia drasticamente la atencion que le dan al profesor ya que no se sentiran
