--- a/index.html
+++ b/index.html
@@ -32,6 +32,9 @@
     tu comida y 10-15 minutos para recibir tu comida, en las demás horas hay pocas personas pidiendo comida y lo
     recibes en el tiempo estimado de guich o yumyum.</p>
   <h2> BenchMaking </h2>
+  <p> Por el momento solo encontramos que habia una aplicacion parecida pero no fue exitosa por la tardanza que habia entre el 
+  usuario y el local, tambien la falta de formas de pago para que puedan ir por su comida y que el usuario no tenga deuda
+  con esa comida al local.</p>
   <h2> Impacto Social </h2>
   <p> Esto ayuda drasticamente las clases que la mayoria de los alumnos tienen hambre, de 11:30 a 2:15 las clases, 
   aunque sea con un poco de comida si cambia drasticamente la atencion que le dan al profesor ya que no se sentiran
