--- a/index.html
+++ b/index.html
@@ -22,8 +22,7 @@
   <br></br>
   <p> Lo resolveremos con una aplicación exclusiva de la comunidad TEC, con la que se pueda pedir comida
   de cualquier local dentro de las instalaciones, y el usuario escoja la hora en la que recogerá su comida.
-  Se debe pedir desde antes, por lo menos con 15 minutos de anticipo, 
-  para que la comida esté preparada a tiempo.
+  Se debe pedir desde antes, por lo menos con 15 minutos de anticipo, para que la comida esté preparada a tiempo.
   Esto agilizará la cantidad de personas que hay en los locales pidiendo y recibiendo
   su comida. Con este proceso se puede pedir la comida y tenerla en los tramos de 15 minutos entre clases. </p>
   </div>
