--- a/index.html
+++ b/index.html
@@ -11,7 +11,75 @@
   <body>
 
 <div class="grid-x">
-  <div class="small-3 cell"></div>
+  <div class="small-4 cell">
+    <table style="width:75%">
+      <tr> 
+        <th> Actividad a realizar </th>
+        <th> Fecha de realización </th>
+        <th> Realizado/No realizado </th>
+         </tr>
+         <tr> 
+           <th> Recabar información de los locales </th>
+        <th> 4 de septiembre </th>
+        <th> En proceso </th>
+            </tr> 
+            <tr> 
+           <th> Entrevistar potenciales usuarios </th>
+        <th> 6 de septiembre </th>
+        <th> No realizado </th>
+            </tr>
+            <tr> 
+           <th> Primera entrega del proyecto (Análisis completo del problema) </th>
+        <th> 8 de septiembre </th>
+        <th> No realizado </th>
+            </tr>
+            <tr> 
+           <th> Continuar con la mejora del formato </th>
+        <th> 12 de septiembre </th>
+        <th> No realizado </th>
+            </tr>
+            <tr> 
+           <th> Comenzar a trabajar con la solución </th>
+        <th> 12 de septiembre </th>
+        <th> No realizado </th>
+            </tr>
+            <tr> 
+           <th> Trabajar en la implementación, mediante pruebas de usuario </th>
+        <th> 19 de septiembre </th>
+        <th> No realizado </th>
+            </tr>
+            <tr> 
+           <th> Mejorar rendimiento de la página </th>
+        <th> 1 de octubre </th>
+        <th> No realizado </th>
+            </tr>
+            <tr> 
+           <th> Hacer más conocida la página/aplicación </th>
+        <th> 15 de octubre </th>
+        <th> No realizado </th>
+            </tr>
+            <tr> 
+           <th> Continuar con la correción de errores </th>
+        <th> 20 de octubre </th>
+        <th> No realizado </th>
+            </tr>
+            <tr> 
+           <th> Continuar con pruebas de usabilidad </th>
+        <th> 27 de octubre </th>
+        <th> No realizado </th>
+            </tr>
+            <tr> 
+           <th> Mejoras en general </th>
+        <th> 10 de noviembre </th>
+        <th> No realizado </th>
+            </tr>
+            <tr> 
+           <th> Entrega final </th>
+        <th> 17 de noviembre </th>
+        <th> No realizado </th>
+            </tr>
+    </table>
+  </div>
   <div class="small-6 cell">
   <h2> Problema dentro de la comunidad Tec </h2>
   <br></br>
@@ -38,7 +106,7 @@
   <p> Esto ayuda drasticamente las clases que la mayoria de los alumnos tienen hambre, de 11:30 a 2:15 las clases, 
   aunque sea con un poco de comida si cambia drasticamente la atencion que le dan al profesor ya que no se sentiran
   angustiados o molestos por tener que esperar 30minutos para comer.</p>
-  <div class="small-3 cell"></div>
+  <div class="small-2 cell"></div>
 </div>
   </body>
 </html>
