--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
             </tr>
             <tr> 
            <th> Entrega final </th>
-        <th> 17 de noviembre </th>
+        <th> 21 de noviembre </th>
         <th> No realizado </th>
             </tr>
     </table>
@@ -106,6 +106,10 @@
   aunque sea con un poco de comida si cambia drasticamente la atencion que le dan al profesor ya que no se sentiran
   angustiados o molestos por tener que esperar 30minutos para comer.</p>
   </div>
+  <p> Retroalimentación de equipos: Brian y Giovanni- Entrevistar a los más alumnos posibles para tener un punto de vista general
+    de lo que necesitan para mejorar su comodidad.
+    Diego y Hugo: Investigar que salió mal de los intentos pasados de soluciones y analizar que mejoraríamos de estas.
+  </p>
   <div class="small-2 cell"></div>
 </div>
   </body>
