--- a/index.html
+++ b/index.html
@@ -107,7 +107,9 @@
   angustiados o molestos por tener que esperar 30minutos para comer.</p>
      <p> Retroalimentación de equipos: Brian y Giovanni- Entrevistar a los más alumnos posibles para tener un punto de vista general
     de lo que necesitan para mejorar su comodidad.
-    Diego y Hugo: Investigar que salió mal de los intentos pasados de soluciones y analizar que mejoraríamos de estas.
+    Diego y Hugo: Investigar que salió mal de los intentos pasados de soluciones y analizar que mejoraríamos de estas, y que tambien 
+      pudieramos agregar la ponderación a cada platillo, para que los alumnos sepan cual platillo es mejor de acuerdo a los 
+       alumnos.
   </p>
   </div>
   <div class="small-2 cell"></div>
