--- a/index.html
+++ b/index.html
@@ -88,27 +88,27 @@
   la siguiente clase o actividad. </p>
   <h2> Introducción al problema </h2>
   <br></br>
-  <p> Lo resolveremos con una aplicación exclusiva de la comunidad TEC, con la que se pueda pedir comida
-  de cualquier local dentro de las instalaciones, y el usuario escoja la hora en la que recogerá su comida.
-  Se debe pedir desde antes, por lo menos con 15 minutos de anticipo, para que la comida esté preparada a tiempo.
-  Esto agilizará la cantidad de personas que hay en los locales pidiendo y recibiendo
-  su comida. Con este proceso se puede pedir la comida y tenerla en los tramos de 15 minutos entre clases. </p>
+  <p> En ciertas horas, especialmente entre la 1:00 y las 2:30 de la tarde, se forman largas filas de personas
+   en los distintos establecimientos de comida en el Tec. Los estudiantes suelen estar varios minutos en espera,
+    tiempo que podrían dedicarlo a otras cosas. </p>
     <h2> Descubrimiento Academico</h2>
-  <p> Sabemos que aproximadamente de 11:30 a 1:00 en los locales de comida hay una tardanza de 5 minutos para pedir
+  <p> Sabemos que aproximadamente de 11:30 a 1:00 en los locales de comida hay una tardanza de 5-10 minutos para pedir
     tu comida y 10-15 minutos para recibir tu comida, en las demás horas hay pocas personas pidiendo comida y lo
     recibes en el tiempo estimado de guich o yumyum.</p>
-  <h2> BenchMaking </h2>
-  <p> Por el momento solo encontramos que habia una aplicacion parecida pero no fue exitosa por la tardanza que habia entre el 
-  usuario y el local, tambien la falta de formas de pago para que puedan ir por su comida y que el usuario no tenga deuda
-  con esa comida al local.</p>
+  <h2> BenchMarking </h2>
+  <p> Encontramos que había una aplicación parecida pero no fue exitosa por la tardanza que había entre el 
+  usuario y el local, también la falta de formas de pago para que puedan ir por su comida y que el usuario no tenga deuda
+  con esa comida al local. Actualmente Guich tiene una aplicación para pedir comida en línea, pero es el único lugar hasta ahora
+    que sabemos maneja algo de este estilo. Wok no tiene nada parecido.</p>
   <h2> Impacto Social </h2>
-  <p> Esto ayuda drasticamente las clases que la mayoria de los alumnos tienen hambre, de 11:30 a 2:15 las clases, 
-  aunque sea con un poco de comida si cambia drasticamente la atencion que le dan al profesor ya que no se sentiran
-  angustiados o molestos por tener que esperar 30minutos para comer.</p>
-     <p> Retroalimentación de equipos: Brian y Giovanni- Entrevistar a los más alumnos posibles para tener un punto de vista general
+  <p> Esto ayudaría  las clases en las que la mayoria de los alumnos tienen hambre, de 11:30 a 2:15, pues
+  aunque sea con un poco de comida sí cambia drasticamente la atencion que le dan al profesor, ya que no se sentirán
+  angustiados o molestos por tener que esperar 30 minutos más para comer.</p>
+    <h2>  Retroalimentación de equipos </h2>
+     <p> Brian y Giovanni- Entrevistar a los más alumnos posibles para tener un punto de vista general
     de lo que necesitan para mejorar su comodidad.
-    Diego y Hugo: Investigar que salió mal de los intentos pasados de soluciones y analizar que mejoraríamos de estas, y que tambien 
-      pudieramos agregar la ponderación a cada platillo, para que los alumnos sepan cual platillo es mejor de acuerdo a los 
+    Diego y Hugo: Investigar que salió mal de los intentos pasados de soluciones y analizar que mejoraríamos de estas, y que también 
+      pudiéramos agregar la ponderación a cada platillo, para que los alumnos sepan cual platillo es mejor de acuerdo a los 
        alumnos.
   </p>
   </div>
