--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
   <p> Encontramos que había una aplicación parecida pero no fue exitosa por la tardanza que había entre el 
   usuario y el local, también la falta de formas de pago para que puedan ir por su comida y que el usuario no tenga deuda
   con esa comida al local. Actualmente Guich tiene una aplicación para pedir comida en línea, pero es el único lugar hasta ahora
-    que sabemos maneja algo de este estilo. Wok no tiene nada parecido.</p>
+    que sabemos maneja algo de este estilo. Ni Wok, YumYum, JuvyJuice o Subway tienen algo parecido.</p>
   <h2> Impacto Social </h2>
   <p> Esto ayudaría  las clases en las que la mayoria de los alumnos tienen hambre, de 11:30 a 2:15, pues
   aunque sea con un poco de comida sí cambia drasticamente la atencion que le dan al profesor, ya que no se sentirán
