--- a/index.html
+++ b/index.html
@@ -81,10 +81,10 @@
     </table>
   </div>
   <div class="small-6 cell">
-    
+   bgcolor:#93B874
   <h2> Problema dentro de la comunidad Tec </h2>
   <br></br>
-  <p bgcolor="#E6E6FA">
+
   <p>Nos estamos enfocando en la tardanza de pedir comida en cualquier local dentro
   de la universidad, para que esta sea entregada antes de que empiece
   la siguiente clase o actividad. </p>
