--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
     </table>
   </div>
   <div class="small-6 cell">
-   bgcolor:#93B874
+   background-color:light-blue;
   <h2> Problema dentro de la comunidad Tec </h2>
   <br></br>
 
