--- a/index.html
+++ b/index.html
@@ -8,8 +8,7 @@
     <link rel="stylesheet" href="foundation.css">
     <link rel="stylesheet" href="app.css">
   </head>
-  <body>
-   background-color:light-blue;
+  <body background-color:"light-blue">
 <div class="grid-x">
   <div class="small-4 cell">
     <table style="width:75%">
