--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="foundation.css">
     <link rel="stylesheet" href="app.css">
   </head>
-  <body background-color:#A9F5E1>
+  <body bgcolor="#A9F5E1">
 <div class="grid-x">
   <div class="small-4 cell">
     <table style="width:75%">
