--- a/index.html
+++ b/index.html
@@ -4,13 +4,15 @@
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Foundation for Sites</title>
+    <title>Proyecto diseño</title>
     <link rel="stylesheet" href="foundation.css">
     <link rel="stylesheet" href="app.css">
   </head>
   <body>
 <div class="grid-x">
   <div class="small-4 cell">
+    <p> Georgina González Enríquez A01632886 </p>
+    <p> Juan Andrés Monter Espina A01228817 </p>
     <table style="width:75%">
       <tr> 
         <th> Actividad a realizar </th>
