--- a/index.html
+++ b/index.html
@@ -94,10 +94,12 @@
   <p> En ciertas horas, especialmente entre la 1:00 y las 2:30 de la tarde, se forman largas filas de personas
    en los distintos establecimientos de comida en el Tec. Los estudiantes suelen estar varios minutos en espera,
     tiempo que podrían dedicarlo a otras cosas. </p>
+     <img src="https://cdn.pixabay.com/photo/2014/08/05/10/31/waiting-410328_960_720.jpg" style="width:304px;height:228px;">
     <h2> Descubrimiento Academico</h2>
   <p> Sabemos que aproximadamente de 11:30 a 1:00 en los locales de comida hay una tardanza de 5-10 minutos para pedir
     tu comida y 10-15 minutos para recibir tu comida, en las demás horas hay pocas personas pidiendo comida y lo
     recibes en el tiempo estimado de guich o yumyum.</p>
+    <img src="https://cdn.pixabay.com/photo/2017/04/30/16/18/pretzel-2273216_960_720.jpg" style="width:304px;height:228px;">
   <h2> BenchMarking </h2>
   <p> Encontramos que había una aplicación parecida pero no fue exitosa por la tardanza que había entre el 
   usuario y el local, también la falta de formas de pago para que puedan ir por su comida y que el usuario no tenga deuda
@@ -107,6 +109,7 @@
   <p> Esto ayudaría  las clases en las que la mayoria de los alumnos tienen hambre, de 11:30 a 2:15, pues
   aunque sea con un poco de comida sí cambia drasticamente la atencion que le dan al profesor, ya que no se sentirán
   angustiados o molestos por tener que esperar 30 minutos más para comer.</p>
+        <img src="https://cdn.pixabay.com/photo/2017/07/31/11/04/reading-2557256_960_720.jpg" style="width:304px;height:228px;">
     <h2>  Retroalimentación de equipos </h2>
      <p> Brian y Giovanni- Entrevistar a los más alumnos posibles para tener un punto de vista general
     de lo que necesitan para mejorar su comodidad.
