--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
   <p>Nos estamos enfocando en la tardanza de pedir comida en cualquier local dentro
   de la universidad, para que esta sea entregada antes de que empiece
   la siguiente clase o actividad. </p>
-  <img src="https://cdn.pixabay.com/photo/2014/08/05/10/31/waiting-410328_960_720.jpg" style="width:304px;height:228px;">
+  <img src="https://prnt.sc/gigvfn" style="width:304px;height:228px;">
   <h2> Introducción al problema </h2>
   <br></br>
   <p> En ciertas horas, especialmente entre la 1:00 y las 2:30 de la tarde, se forman largas filas de personas
@@ -109,7 +109,7 @@
   <p> Esto ayudaría  las clases en las que la mayoria de los alumnos tienen hambre, de 11:30 a 2:15, pues
   aunque sea con un poco de comida sí cambia drasticamente la atencion que le dan al profesor, ya que no se sentirán
   angustiados o molestos por tener que esperar 30 minutos más para comer.</p>
-        <img src="https://cdn.pixabay.com/photo/2017/07/31/11/04/reading-2557256_960_720.jpg" style="width:304px;height:228px;">
+        <img src="http://prntscr.com/gigvy2" style="width:304px;height:228px;">
     <h2>  Retroalimentación de equipos </h2>
      <p> Brian y Giovanni- Entrevistar a los más alumnos posibles para tener un punto de vista general
     de lo que necesitan para mejorar su comodidad.
