--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
   <p>Nos estamos enfocando en la tardanza de pedir comida en cualquier local dentro
   de la universidad, para que esta sea entregada antes de que empiece
   la siguiente clase o actividad. </p>
-  <img src="https://prnt.sc/gigvfn" style="width:304px;height:228px;">
+<blockquote class="imgur-embed-pub" lang="en" data-id="a/RpAfr"><a href="//imgur.com/RpAfr"></a></blockquote><script async src="//s.imgur.com/min/embed.js" charset="utf-8"></script>
   <h2> Introducción al problema </h2>
   <br></br>
   <p> En ciertas horas, especialmente entre la 1:00 y las 2:30 de la tarde, se forman largas filas de personas
@@ -109,7 +109,7 @@
   <p> Esto ayudaría  las clases en las que la mayoria de los alumnos tienen hambre, de 11:30 a 2:15, pues
   aunque sea con un poco de comida sí cambia drasticamente la atencion que le dan al profesor, ya que no se sentirán
   angustiados o molestos por tener que esperar 30 minutos más para comer.</p>
-        <img src="http://prntscr.com/gigvy2" style="width:304px;height:228px;">
+ <blockquote class="imgur-embed-pub" lang="en" data-id="a/tDGXO"><a href="//imgur.com/tDGXO"></a></blockquote><script async src="//s.imgur.com/min/embed.js" charset="utf-8"></script>
     <h2>  Retroalimentación de equipos </h2>
      <p> Brian y Giovanni- Entrevistar a los más alumnos posibles para tener un punto de vista general
     de lo que necesitan para mejorar su comodidad.
