--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
   <p>Nos estamos enfocando en la tardanza de pedir comida en cualquier local dentro
   de la universidad, para que esta sea entregada antes de que empiece
   la siguiente clase o actividad. </p>
-<blockquote class="imgur-embed-pub" lang="en" data-id="a/RpAfr"><a href="//imgur.com/RpAfr"></a></blockquote><script async src="//s.imgur.com/min/embed.js" charset="utf-8"></script>
+<blockquote class="imgur-embed-pub" lang="en" data-id="a/KQFsS"><a href="//imgur.com/KQFsS"></a></blockquote><script async src="//s.imgur.com/min/embed.js" charset="utf-8"></script>
   <h2> Introducción al problema </h2>
   <br></br>
   <p> En ciertas horas, especialmente entre la 1:00 y las 2:30 de la tarde, se forman largas filas de personas
@@ -99,7 +99,7 @@
   <p> Sabemos que aproximadamente de 11:30 a 1:00 en los locales de comida hay una tardanza de 5-10 minutos para pedir
     tu comida y 10-15 minutos para recibir tu comida, en las demás horas hay pocas personas pidiendo comida y lo
     recibes en el tiempo estimado de guich o yumyum.</p>
-    <img src="https://cdn.pixabay.com/photo/2017/08/06/19/59/people-2595757_960_720.jpg" style="width:304px;height:228px;">
+    <blockquote class="imgur-embed-pub" lang="en" data-id="a/RpAfr"><a href="//imgur.com/RpAfr"></a></blockquote><script async src="//s.imgur.com/min/embed.js" charset="utf-8"></script>
   <h2> BenchMarking </h2>
   <p> Encontramos que había una aplicación parecida pero no fue exitosa por la tardanza que había entre el 
   usuario y el local, también la falta de formas de pago para que puedan ir por su comida y que el usuario no tenga deuda
