--- a/index.html
+++ b/index.html
@@ -20,19 +20,19 @@
         <th> Realizado/No realizado </th>
          </tr>
          <tr> 
-           <th> Recabar información de los locales </th>
-        <th> 4 de septiembre </th>
-        <th> En proceso </th>
+           <th bgcolor="#58FA82"> Recabar información de los locales </th>
+        <th bgcolor="#58FA82"> 4 de septiembre </th>
+        <th bgcolor="#58FA82"> Realizado </th>
             </tr> 
             <tr> 
-           <th> Entrevistar potenciales usuarios </th>
-        <th> 6 de septiembre </th>
-        <th> No realizado </th>
+           <th bgcolor="#00BFFF"> Entrevistar potenciales usuarios </th>
+        <th bgcolor="#00BFFF"> 6 de septiembre </th>
+        <th bgcolor="#00BFFF"> Realizado </th>
             </tr>
             <tr> 
            <th> Primera entrega del proyecto (Análisis completo del problema) </th>
         <th> 8 de septiembre </th>
-        <th> No realizado </th>
+        <th> En proceso </th>
             </tr>
             <tr> 
            <th> Continuar con la mejora del formato </th>
