--- a/index.html
+++ b/index.html
@@ -112,7 +112,8 @@
  <blockquote class="imgur-embed-pub" lang="en" data-id="a/tDGXO"><a href="//imgur.com/tDGXO"></a></blockquote><script async src="//s.imgur.com/min/embed.js" charset="utf-8"></script>
     <h2>  Retroalimentación de equipos </h2>
      <p> Brian y Giovanni- Entrevistar a los más alumnos posibles para tener un punto de vista general
-    de lo que necesitan para mejorar su comodidad.
+    de lo que necesitan para mejorar su comodidad. </p>
+    <p>
     Diego y Hugo: Investigar que salió mal de los intentos pasados de soluciones y analizar que mejoraríamos de estas, y que también 
       pudiéramos agregar la ponderación a cada platillo, para que los alumnos sepan cual platillo es mejor de acuerdo a los 
        alumnos.
