--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
     <p> Juan Andrés Monter Espina A01228817 </p>
     <table style="width:75%">
       <tr> 
-        <th> Actividad a realizar </th>
-        <th> Fecha de realización </th>
-        <th> Realizado/No realizado </th>
+        <th bgcolor="#FE2E64"> Actividad a realizar </th>
+        <th bgcolor="#FE2E64"> Fecha de realización </th>
+        <th bgcolor="#FE2E64"> Realizado/No realizado </th>
          </tr>
          <tr> 
            <th bgcolor="#58FA82"> Recabar información de los locales </th>
