--- a/examen2.html
+++ b/examen2.html
@@ -59,6 +59,7 @@
   si no reconocen todos los edificios del tec.
  </p>
 <h3> Imagine that you have to implement those tasks in a mobile application. Draw a mockup in paper that represent the steps that the user has to do in that app. </h3>
+  <blockquote class="imgur-embed-pub" lang="en" data-id="a/EyCf7"><a href="//imgur.com/EyCf7"></a></blockquote><script async src="//s.imgur.com/min/embed.js" charset="utf-8"></script>
 <br>
 <h3> Imagine that a user and an expert give you feedback. What do you think that feedback is? </h3>
 <p> 
