--- a/examen2.html
+++ b/examen2.html
@@ -59,7 +59,7 @@
   si no reconocen todos los edificios del tec.
  </p>
 <h3> Imagine that you have to implement those tasks in a mobile application. Draw a mockup in paper that represent the steps that the user has to do in that app. </h3>
-  <img src="https://imgur.com/a/EyCf7" height="500">
+  <center> <img src="https://i.imgur.com/HRCwopn.jpg" height="300"  width="30%" > </center>
 <br>
 <h3> Imagine that a user and an expert give you feedback. What do you think that feedback is? </h3>
 <p> 
