--- a/examen2.html
+++ b/examen2.html
@@ -23,7 +23,7 @@
  </p>
 <h3> Write a qualitative evaluation of your work during the second term. Explain. (Each member) </h3>
 <p>
-  Juan: Siento que podemos encontrar la mejor manera de hacer las cosas eficientes sin perjudicar la calidad de la solución.
+  Juan: Siento que podemos encontrar la mejor manera de hacer las cosas eficientes sin perjudicar la calidad de la solución. <br>
   Georgina: Este parcial aprendimos nuevas herramientas para crear una página web, y eso nos ha ayudado a hacer más rápido los trabajos. Considerando que en el primer parcial 
   nos costaba mucho más trabajo realizar una página sencilla, pienso que hemos mejorado bastante. Además, continuamos aprendiendo y aplicando los conocimientos obtenidos en cada
   clase.
