--- a/persona.html
+++ b/persona.html
@@ -5,8 +5,8 @@
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Proyecto diseño </title>
-    <link rel="stylesheet" href="css/foundation.css">
-    <link rel="stylesheet" href="css/app.css">
+    <link rel="stylesheet" href="foundation.css">
+    <link rel="stylesheet" href="app.css">
   </head>
   <body>
 <h2 align = "center"> Persona </h2>
@@ -46,7 +46,7 @@
 <br> 
 <p class = "textoPersona" id = "texto10"> Solo requiere que estén situados en el instituto. </p>
 
-<script src="js/vendor/jquery.js"></script>
+<script src="jquery.js"></script>
 <script>
 
    $(document).ready(function()
