--- a/index.html
+++ b/index.html
@@ -83,6 +83,7 @@
   </div>
   <div class="small-6 cell">
 
+  <a href="https://rawgit.com/ggonzaleze/DisenoProject/master/persona.html" class="button">Learn More</a> 
   <h2> Problema dentro de la comunidad Tec </h2>
   <br></br>
 
