--- a/index.html
+++ b/index.html
@@ -84,6 +84,7 @@
   <div class="small-6 cell">
 
   <a href="https://rawgit.com/ggonzaleze/DisenoProject/master/persona.html" class="button"> Persona </a> 
+  <a href="https://rawgit.com/ggonzaleze/DisenoProject/master/soluciones.html" class="button"> Soluciones </a>
   <h2> Problema dentro de la comunidad Tec </h2>
   <br></br>
 
