--- a/index.html
+++ b/index.html
@@ -10,79 +10,12 @@
   </head>
   <body>
 <div class="grid-x">
-  <div class="small-4 cell">
+  <div class="small-2 cell">
     <p> Georgina González Enríquez A01632886 </p>
     <p> Juan Andrés Monter Espina A01228817 </p>
-    <table style="width:75%">
-      <tr> 
-        <th bgcolor="#FE2E64"> Actividad a realizar </th>
-        <th bgcolor="#FE2E64"> Fecha de realización </th>
-        <th bgcolor="#FE2E64"> Realizado/No realizado </th>
-         </tr>
-         <tr> 
-           <th bgcolor="#58FA82"> Recabar información de los locales </th>
-        <th bgcolor="#58FA82"> 4 de septiembre </th>
-        <th bgcolor="#58FA82"> Realizado </th>
-            </tr> 
-            <tr> 
-           <th bgcolor="#00BFFF"> Entrevistar potenciales usuarios </th>
-        <th bgcolor="#00BFFF"> 6 de septiembre </th>
-        <th bgcolor="#00BFFF"> Realizado </th>
-            </tr>
-            <tr> 
-           <th> Primera entrega del proyecto (Análisis completo del problema) </th>
-        <th> 8 de septiembre </th>
-        <th> En proceso </th>
-            </tr>
-            <tr> 
-           <th> Continuar con la mejora del formato </th>
-        <th> 12 de septiembre </th>
-        <th> No realizado </th>
-            </tr>
-            <tr> 
-           <th> Comenzar a trabajar con la solución </th>
-        <th> 12 de septiembre </th>
-        <th> No realizado </th>
-            </tr>
-            <tr> 
-           <th> Trabajar en la implementación, mediante pruebas de usuario </th>
-        <th> 19 de septiembre </th>
-        <th> No realizado </th>
-            </tr>
-            <tr> 
-           <th> Mejorar rendimiento de la página </th>
-        <th> 1 de octubre </th>
-        <th> No realizado </th>
-            </tr>
-            <tr> 
-           <th> Hacer más conocida la página/aplicación </th>
-        <th> 15 de octubre </th>
-        <th> No realizado </th>
-            </tr>
-            <tr> 
-           <th> Continuar con la correción de errores </th>
-        <th> 20 de octubre </th>
-        <th> No realizado </th>
-            </tr>
-            <tr> 
-           <th> Continuar con pruebas de usabilidad </th>
-        <th> 27 de octubre </th>
-        <th> No realizado </th>
-            </tr>
-            <tr> 
-           <th> Mejoras en general </th>
-        <th> 10 de noviembre </th>
-        <th> No realizado </th>
-            </tr>
-            <tr> 
-           <th> Entrega final </th>
-        <th> 21 de noviembre </th>
-        <th> No realizado </th>
-            </tr>
-    </table>
   </div>
-  <div class="small-6 cell">
-
+  <div class="small-8 cell">
+  <a href="https://rawgit.com/ggonzaleze/DisenoProject/master/tabla.html" class="button"> To do list </a> 
   <a href="https://rawgit.com/ggonzaleze/DisenoProject/master/persona.html" class="button"> Persona </a> 
   <a href="https://rawgit.com/ggonzaleze/DisenoProject/master/soluciones.html" class="button"> Soluciones </a>
   <h2> Problema dentro de la comunidad Tec </h2>
