--- a/soluciones.html
+++ b/soluciones.html
@@ -48,6 +48,7 @@ mayor reconocimiento y confianza la app.
   para buscar lo que necesitan. Esto a su vez puede resolver el problema de que la gente pierde mucho tiempo trasladándose de un lugar a otro en busca de sus materiales.
 </p>
 <div align = "center">
+      <h5> Prototipo papel </h5>
   <img src="https://i.imgur.com/KegpAWo.jpg"  width="500">
   <img src="https://i.imgur.com/w0y8yVe.jpg" width="390">
 </div>
