--- a/LocalPrototipo.html
+++ b/LocalPrototipo.html
@@ -13,7 +13,9 @@
 <h1> Local Prototipo</h1>
 </div>
 <div class="grid-x">
-<div class="small-2 cell"> </div>
+<div class="small-2 cell"> 
+   <a href="#0" class="expanded button">Regresar</a>
+</div>
 
 
 <div class="small-8 cell"align= "center">
@@ -42,11 +44,6 @@
 
 </div>
 </div>
-<div class="grid-x">
-<div class="small-3 cell"> </div>
-<div class="small-6 cell">
-    <a href="#0" class="expanded button">Pagar</a>
-</div>
-</div>
+
 </body>
 </html>
