--- a/LocalPrototipo.html
+++ b/LocalPrototipo.html
@@ -5,8 +5,8 @@
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Foundation for Sites</title>
-    <link rel="stylesheet" href="foundation.css">
-    <link rel="stylesheet" href="app.css">
+    <link rel="stylesheet" href="css/foundation.css">
+    <link rel="stylesheet" href="css/app.css">
   </head>
   <body>
 <div align= "center">
@@ -14,7 +14,7 @@
 </div>
 <div class="grid-x">
 <div class="small-2 cell"> 
-   <a href="#0" class="expanded button">Regresar</a>
+   <a href="#0" class="button">Regresar</a>
 </div>
 
 
@@ -22,25 +22,25 @@
 
 <ul class="vertical menu" data-accordion-menu>
   <li>
-    <a class="producto">Producto #1     precio1</a>
-  <a class="product"> imagen del producto </a>
-
+    <a class="producto">Producto #1 precio1</a>
+  <img src = "https://i.imgur.com/RJphkdl.jpg" width = "400"> 
   </li>
   <li>
     <a class="producto">Producto #2      precio 2</a>
-  <a class="product"> imagen del producto </a>
+    <img src = "https://i.imgur.com/RJphkdl.jpg" width = "400">
   </li>
   <li><a class="producto">Producto #3     precio 3</a></li>
-  <a class="product"> imagen del producto </a>
+    <img src = "https://i.imgur.com/A0v0NN5.jpg" width = "400">
 </div>
 
 
 <div class="small-2 cell">
+    <br><br>
     <a href="#0" class="success button">Agregar al carrito- #1</a>
-  <br>
+    <br><br><br><br><br><br><br><br><br><br>
     <a href="#0" class="success button">Agregar al carrito- #2</a>
-  <br>
-    <a href="#0" class="success button">Agregar al carrito- #3</a>
+   <br><br><br><br><br><br><br><br><br>
+   <a href="#0" class="success button">Agregar al carrito- #3</a>
 
 </div>
 </div>
