--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
   <a href="https://rawgit.com/ggonzaleze/DisenoProject/master/tabla.html" class="button"> To do list </a> 
   <a href="https://rawgit.com/ggonzaleze/DisenoProject/master/persona.html" class="button"> Persona </a> 
   <a href="https://rawgit.com/ggonzaleze/DisenoProject/master/soluciones.html" class="button"> Soluciones </a>
+  <a href="https://rawgit.com/ggonzaleze/DisenoProject/master/principalPrototipo.html" class="button">Prototipo</a>
   <h2> Problema dentro de la comunidad Tec </h2>
   <br></br>
 
