--- a/LocalPrototipo.html
+++ b/LocalPrototipo.html
@@ -14,7 +14,7 @@
 </div>
 <div class="grid-x">
 <div class="small-2 cell"> 
-   <a href="#0" class="button">Regresar</a>
+   <a href="https://rawgit.com/ggonzaleze/DisenoProject/master/principalPrototipo.html" class="button">Regresar</a>
 </div>
 
 
