--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
   <a href="https://rawgit.com/ggonzaleze/DisenoProject/master/persona.html" class="button"> Persona </a> 
   <a href="https://rawgit.com/ggonzaleze/DisenoProject/master/soluciones.html" class="button"> Soluciones </a>
   <a href="https://rawgit.com/ggonzaleze/DisenoProject/master/principalPrototipo.html" class="button">Prototipo</a>
+  <a href="https://rawgit.com/ggonzaleze/DisenoProject/master/Interviews.html" class="button"> Entrevistas </a> 
   <h2> Problema dentro de la comunidad Tec </h2>
   <br></br>
 
