--- a/LocalPrototipo.html
+++ b/LocalPrototipo.html
@@ -27,7 +27,7 @@
   </li>
   <li>
     <a class="producto">Producto #2      precio 2</a>
-    <img src = "https://i.imgur.com/RJphkdl.jpg" width = "400">
+    <img src = "https://i.imgur.com/jidegn2.jpg" width = "400">
   </li>
   <li><a class="producto">Producto #3     precio 3</a></li>
     <img src = "https://i.imgur.com/A0v0NN5.jpg" width = "400">
