--- a/LocalPrototipo.html
+++ b/LocalPrototipo.html
@@ -22,14 +22,14 @@
 
 <ul class="vertical menu" data-accordion-menu>
   <li>
-    <a class="producto">Producto #1 precio1</a>
+    <a class="producto">Producto #1 &nbsp&nbsp$$precio1</a>
   <img src = "https://i.imgur.com/RJphkdl.jpg" width = "400"> 
   </li>
   <li>
-    <a class="producto">Producto #2      precio 2</a>
+    <a class="producto">Producto #2 &nbsp&nbsp$$precio 2</a>
     <img src = "https://i.imgur.com/jidegn2.jpg" width = "400">
   </li>
-  <li><a class="producto">Producto #3     precio 3</a></li>
+  <li><a class="producto">Producto #3 &nbsp&nbsp$$precio 3</a></li>
     <img src = "https://i.imgur.com/A0v0NN5.jpg" width = "400">
 </div>
 
