--- a/LocalPrototipo.html
+++ b/LocalPrototipo.html
@@ -5,44 +5,29 @@
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Foundation for Sites</title>
-    <link rel="stylesheet" href="foundation.css">
-    <link rel="stylesheet" href="app.css">
+    <link rel="stylesheet" href="css/foundation.css">
+    <link rel="stylesheet" href="css/app.css">
   </head>
   <body>
 <div align= "center">
 <h1> Local Prototipo</h1>
 </div>
-<div class="grid-x">
-<div class="small-2 cell"> 
-   <a href="https://rawgit.com/ggonzaleze/DisenoProject/master/principalPrototipo.html" class="button">Regresar</a>
-</div>
+<a href="https://rawgit.com/ggonzaleze/DisenoProject/master/principalPrototipo.html" class="button">Regresar</a>
 
+<div align = "center">
 
-<div class="small-8 cell"align= "center">
+  <p class = "producto">Producto #1 $$precio1 <a href="#0" class="success button">Agregar al carrito</a> </p> 
+  <img src = "https://i.imgur.com/RJphkdl.jpg" width = "400">  
+   <br><br>
 
-<ul class="vertical menu" data-accordion-menu>
-  <li>
-    <a class="producto">Producto #1 &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp$$precio1</a>
-  <img src = "https://i.imgur.com/RJphkdl.jpg" width = "400"> 
-  </li>
-  <li>
-    <a class="producto">Producto #2 &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp$$precio 2</a>
-    <img src = "https://i.imgur.com/jidegn2.jpg" width = "400">
-  </li>
-  <li><a class="producto">Producto #3 &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp$$precio 3</a></li>
-    <img src = "https://i.imgur.com/A0v0NN5.jpg" width = "400">
-</div>
+  <p class = "producto">Producto #2 $$precio2 <a href="#0" class="success button">Agregar al carrito</a> </p> 
+  <img src = "https://i.imgur.com/jidegn2.jpg" width = "400">  
+  <br><br>
 
-
-<div class="small-2 cell">
-    <br><br>
-    <a href="#0" class="success button">Agregar al carrito- #1</a>
-    <br><br><br><br><br><br><br><br><br><br>
-    <a href="#0" class="success button">Agregar al carrito- #2</a>
-   <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
-   <a href="#0" class="success button">Agregar al carrito- #3</a>
-
-</div>
+  <p class = "producto">Producto #3 $$precio3 <a href="#0" class="success button">Agregar al carrito</a> </p> 
+  <img src = "https://i.imgur.com/A0v0NN5.jpg" width = "400">  
+  <br><br>
+  
 </div>
 
 </body>
