--- a/principalPrototipo.html
+++ b/principalPrototipo.html
@@ -51,7 +51,7 @@
 <br>
 <br>
 <br>
-<a class = "large button" href="#0">Pagar</a>
+<a class = "large button" href="https://rawgit.com/ggonzaleze/DisenoProject/master/pagarProto.html">Pagar</a>
 
 
   </div>
