--- a/principalPrototipo.html
+++ b/principalPrototipo.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="app.css">
   </head>
   <body>
-<h2 align = "center"> Página principal prototipo </h2>
+<h2 align = "center"> "Lokal" </h2>
 <br>
 <div class = "grid-x">
 <div class = "small-2 cell"> </div>
