--- a/LocalPrototipo.html
+++ b/LocalPrototipo.html
@@ -16,14 +16,14 @@
 
 <div align = "center">
 
-  <p class = "producto">Producto #1 $$precio1 <a href="#0" class="success button">Agregar al carrito</a> </p> 
+  <p class = "producto">Producto #1 $$precio1 <a href="#0" class="success button" id = "agregar1">Agregar al carrito</a> </p> 
   <img src = "https://i.imgur.com/RJphkdl.jpg" width = "400" >  
    <br> <br>
-  <p class = "producto">Producto #2 $$precio2 <a href="#0" class="success button">Agregar al carrito</a> </p> 
+  <p class = "producto">Producto #2 $$precio2 <a href="#0" class="success button" id = "agregar2">Agregar al carrito</a> </p> 
   <img src = "https://i.imgur.com/jidegn2.jpg" width = "400" height= "225">  
   <br> <br>
 
-  <p class = "producto">Producto #3 $$precio3 <a href="#0" class="success button">Agregar al carrito</a> </p> 
+  <p class = "producto">Producto #3 $$precio3 <a href="#0" class="success button" id = "agregar3">Agregar al carrito</a> </p> 
   <img src = "https://i.imgur.com/A0v0NN5.jpg" width = "400" height= "225">  
   <br> <br>
   
@@ -34,6 +34,14 @@
 <!-- Global site tag (gtag.js) - Google Analytics -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=UA-109191971-1"></script>
 <script>
+document.getElementById("agregar1").addEventListener("click",mostrar);
+document.getElementById("agregar2").addEventListener("click",mostrar);
+document.getElementById("agregar3").addEventListener("click",mostrar);
+
+function mostrar(){
+  alert("Agregado al carrito");
+}
+  
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
