--- a/principalPrototipo.html
+++ b/principalPrototipo.html
@@ -9,49 +9,60 @@
     <link rel="stylesheet" href="app.css">
   </head>
   <body>
-<h2 align = "center"> "Commeatus" </h2>
+    
+<style> 
+body{
+background: url( "https://i.imgur.com/rFkIrHf.png") no-repeat fixed center;
+-webkit-background-size: cover;
+-moz-background-size: cover;
+-o-background-size: cover;
+background-size: cover;
+}
+</style>  
+   
 <br>
 <div class = "grid-x">
 <div class = "small-2 cell"> </div>
 
-<div class = "small-8 cell"
-<label>Buscar
+<div class = "small-8 cell">
+<h2 class="titulo" align = "center"> Commeatus prototipo </h2>
+<br>
+<label class = "buscar">Buscar
     <input type="text" placeholder="Local/Producto" aria-describedby="exampleHelpText">
   </label>
   <br>
 
   <div align = "center">
-<a class = "large button" href="https://rawgit.com/ggonzaleze/DisenoProject/master/LocalPrototipo.html">Local</a>
+<a class = "large button boton" href="https://rawgit.com/ggonzaleze/DisenoProject/master/LocalPrototipo.html">Local</a>
 &nbsp
-<a class = "large button" href="https://rawgit.com/ggonzaleze/DisenoProject/master/LocalPrototipo.html">Local</a>
+<a class = "large button boton" href="https://rawgit.com/ggonzaleze/DisenoProject/master/LocalPrototipo.html">Local</a>
 &nbsp
-<a class = "large button" href="https://rawgit.com/ggonzaleze/DisenoProject/master/LocalPrototipo.html">Local</a>
+<a class = "large button boton" href="https://rawgit.com/ggonzaleze/DisenoProject/master/LocalPrototipo.html">Local</a>
 &nbsp
-<a class = "large button" href="https://rawgit.com/ggonzaleze/DisenoProject/master/LocalPrototipo.html">Local</a>
+<a class = "large button boton" href="https://rawgit.com/ggonzaleze/DisenoProject/master/LocalPrototipo.html">Local</a>
 <br>
 <br>
-<a class = "large button" href="https://rawgit.com/ggonzaleze/DisenoProject/master/LocalPrototipo.html">Local</a>
+<a class = "large button boton" href="https://rawgit.com/ggonzaleze/DisenoProject/master/LocalPrototipo.html">Local</a>
 &nbsp
-<a class = "large button" href="https://rawgit.com/ggonzaleze/DisenoProject/master/LocalPrototipo.html">Local</a>
+<a class = "large button boton" href="https://rawgit.com/ggonzaleze/DisenoProject/master/LocalPrototipo.html">Local</a>
 &nbsp
-<a class = "large button" href="https://rawgit.com/ggonzaleze/DisenoProject/master/LocalPrototipo.html">Local</a>
+<a class = "large button boton" href="https://rawgit.com/ggonzaleze/DisenoProject/master/LocalPrototipo.html">Local</a>
 &nbsp
-<a class = "large button" href="https://rawgit.com/ggonzaleze/DisenoProject/master/LocalPrototipo.html">Local</a>
+<a class = "large button boton" href="https://rawgit.com/ggonzaleze/DisenoProject/master/LocalPrototipo.html">Local</a>
 <br>
 <br>
 
 
-<a class = "large button" href="https://rawgit.com/ggonzaleze/DisenoProject/master/LocalPrototipo.html">Local</a>
+<a class = "large button boton" href="https://rawgit.com/ggonzaleze/DisenoProject/master/LocalPrototipo.html">Local</a>
 &nbsp
-<a class = "large button" href="https://rawgit.com/ggonzaleze/DisenoProject/master/LocalPrototipo.html">Local</a>
+<a class = "large button boton" href="https://rawgit.com/ggonzaleze/DisenoProject/master/LocalPrototipo.html">Local</a>
 &nbsp
-<a class = "large button" href="https://rawgit.com/ggonzaleze/DisenoProject/master/LocalPrototipo.html">Local</a>
+<a class = "large button boton" href="https://rawgit.com/ggonzaleze/DisenoProject/master/LocalPrototipo.html">Local</a>
 &nbsp
-<a class = "large button" href="https://rawgit.com/ggonzaleze/DisenoProject/master/LocalPrototipo.html">Local</a>
+<a class = "large button boton" href="https://rawgit.com/ggonzaleze/DisenoProject/master/LocalPrototipo.html">Local</a>
 <br>
 <br>
-<a class = "large button" href="https://rawgit.com/ggonzaleze/DisenoProject/master/pagarProto.html">Pagar</a>
-
+<a class = "large button boton" href="https://rawgit.com/ggonzaleze/DisenoProject/master/pagarProto.html">Pagar</a>
 
   </div>
 
