--- a/LocalPrototipo.html
+++ b/LocalPrototipo.html
@@ -10,20 +10,20 @@
   </head>
   <body>
 <div align= "center">
-<h1> Local Prototipo</h1>
+<h1> Restaurante Tec</h1>
 </div>
 <a href="https://rawgit.com/ggonzaleze/DisenoProject/master/principalPrototipo.html" class="button">Regresar</a>
 
 <div align = "center">
 
-  <p class = "producto">Producto #1 $$precio1 <a href="#0" class="success button" id = "agregar1">Agregar al carrito</a> </p> 
+  <p class = "producto">Hamburguesa con papas $50 <a href="#0" class="success button" id = "agregar1">Agregar al carrito</a> </p> 
   <img src = "https://i.imgur.com/RJphkdl.jpg" width = "400" >  
    <br> <br>
-  <p class = "producto">Producto #2 $$precio2 <a href="#0" class="success button" id = "agregar2">Agregar al carrito</a> </p> 
+  <p class = "producto">Quesadillas con carne $40 <a href="#0" class="success button" id = "agregar2">Agregar al carrito</a> </p> 
   <img src = "https://i.imgur.com/jidegn2.jpg" width = "400" height= "225">  
   <br> <br>
 
-  <p class = "producto">Producto #3 $$precio3 <a href="#0" class="success button" id = "agregar3">Agregar al carrito</a> </p> 
+  <p class = "producto">Hog dog $35 <a href="#0" class="success button" id = "agregar3">Agregar al carrito</a> </p> 
   <img src = "https://i.imgur.com/A0v0NN5.jpg" width = "400" height= "225">  
   <br> <br>
   
