--- a/pagarProto.html
+++ b/pagarProto.html
@@ -9,25 +9,23 @@
     <link rel="stylesheet" href="app.css">
   </head>
   <body>
-<h2> Realizar pago prototipo </h2>
+<h2> Realizar pago </h2>
 <br>
 <div align = "center" class="grid-x"> 
 
     <div class="small-4 cell"> 
     <h3> Productos </h3>
-    <p class = "textoPago"> Producto # 1 </p>
-    <p class = "textoPago"> Producto # 2 </p>
-    <p class = "textoPago"> Producto # 3 </p>
-    <p class = "textoPago"> Producto # 4 </p>
+    <p class = "textoPago"> Hamburguesa con papas </p>
+    <p class = "textoPago"> Quesadillas con carne </p>
+    <p class = "textoPago"> Hot dog </p>
     </div>
 
     <div class="small-4 cell"> 
     <h3> Precio </h3>
-    <p class = "textoPago"> Precio # 1 </p>
-    <p class = "textoPago"> Precio # 2 </p>
-    <p class = "textoPago"> Precio # 3 </p>
-    <p class = "textoPago"> Precio # 4 </p>
-    <p class = "textoPago"> TOTAL: $$precioTotal </p>
+    <p class = "textoPago"> 50.00 </p>
+    <p class = "textoPago"> 40.00 </p>
+    <p class = "textoPago"> 35.00 </p>
+    <p class = "textoPago"> TOTAL: $125.00 </p>
     <label>Forma de pago
     <select>
       <option value="husker">Efectivo</option>
