--- a/principalPrototipo.html
+++ b/principalPrototipo.html
@@ -25,7 +25,7 @@ background-size: cover;
 <div class = "small-2 cell"> </div>
 
 <div class = "small-8 cell">
-<h2 class="titulo" align = "center"> Commeatus prototipo </h2>
+<h2 class="titulo" align = "center"> Commeatus </h2>
 <br>
 <label class = "buscar">Buscar
     <input type="text" placeholder="Local/Producto" aria-describedby="exampleHelpText">
